# power_scraper

./: .gitignore  Cargo.toml  README.md  powerfullyScraped.csv  update_version.py
src/: main.rs
tests/: integration_tests.rs
